[gd_scene load_steps=8 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://assets/bar.png" type="Texture" id=2]
[ext_resource path="res://assets/bar-vert.png" type="Texture" id=3]
[ext_resource path="res://TileButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://NewGameFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/Gears.tres" type="SpriteFrames" id=7]

[node name="Board" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TextureRect1" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 683.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Anchor" ]

[node name="TextureRect2" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 309.0
margin_right = 683.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Anchor" ]

[node name="TextureRect3" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_right = 210.0
margin_bottom = 683.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Size Flags", "Theme" ]

[node name="TextureRect4" type="TextureRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 403.0
margin_right = 421.0
margin_bottom = 683.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Size Flags", "Theme" ]

[node name="Button0" parent="." index="4" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 1.0
margin_top = 2.0
margin_right = 642.0
margin_bottom = 482.0
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Material", "Pause", "Rect", "Visibility", "custom_constants" ]

[node name="Button1" parent="." index="5" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 211.0
margin_top = 2.0
margin_right = 852.0
margin_bottom = 482.0

[node name="Button2" parent="." index="6" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 421.0
margin_top = 2.0
margin_right = 1062.0
margin_bottom = 482.0

[node name="Button3" parent="." index="7" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 1.0
margin_top = 163.0
margin_right = 642.0
margin_bottom = 643.0

[node name="Button4" parent="." index="8" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 210.0
margin_top = 163.0
margin_right = 851.0
margin_bottom = 643.0

[node name="Button5" parent="." index="9" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 421.0
margin_top = 161.0
margin_right = 1062.0
margin_bottom = 641.0

[node name="Button6" parent="." index="10" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 1.0
margin_top = 328.0
margin_right = 642.0
margin_bottom = 808.0

[node name="Button7" parent="." index="11" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 210.0
margin_top = 327.0
margin_right = 851.0
margin_bottom = 807.0

[node name="Button8" parent="." index="12" groups=[
"Tiles",
] instance=ExtResource( 4 )]

margin_left = 421.0
margin_top = 327.0
margin_right = 1062.0
margin_bottom = 807.0

[node name="WinnerLabel" type="Label" parent="." index="13"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 22.0
margin_right = 612.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.864714, 0.871094, 0.0544434, 1 )
text = "Computer
wins!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="NewGameButton" type="Button" parent="." index="14"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 283.0
margin_top = 348.0
margin_right = 602.0
margin_bottom = 451.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="ComputerThinkTimer" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ComputerThinkingAnimation" type="AnimatedSprite" parent="." index="16"]

position = Vector2( 38.6308, 37.152 )
scale = Vector2( 0.303441, 0.362493 )
frames = ExtResource( 7 )
animation = "default"
frame = 26
playing = true

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="timeout" from="ComputerThinkTimer" to="." method="_on_ComputerThinkTimer_timeout"]


